# refinery

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: refineryConfig.cmake.in
docs/plans/: 2026-02-07-not-predicate-simplification-design.md
examples/: CMakeLists.txt
examples/containers/: 01_construction.cpp  02_predicate_gated_access.cpp  03_mutations.cpp  04_static_indexing.cpp  05_range_insertion.cpp  06_freeze_guard.cpp  CMakeLists.txt
examples/runtime_overhead/: 01_runtime_check_positive.cpp  02_runtime_check_nonzero.cpp  03_runtime_check_inrange.cpp  04_checked_addition.cpp  04_optional_addition.cpp  05_checked_subtraction.cpp  05_optional_subtraction.cpp
examples/zero_overhead/: 01_value_passthrough.cpp  02_arithmetic.cpp  03_safe_sqrt.cpp  04_parameter_passing.cpp  05_comparison.cpp  06_multiply.cpp  07_safe_divide.cpp  08_chain.cpp
include/rcpp/: compose.hpp  diagnostics.hpp  interval.hpp  operations.hpp  predicates.hpp  refine.hpp  refined.hpp  refined_type.hpp
include/refinery/: compose.hpp  diagnostics.hpp  domain.hpp  interval.hpp  operations.hpp  predicates.hpp  refined_container.hpp  refined_type.hpp  refinery.hpp
scripts/: compare_asm.sh  run-clang-format.sh
tests/: CMakeLists.txt  test_refine.cpp  test_refined_container.cpp
